# OPENENV_HACKATHON_PROJECT

./: Dockerfile  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
.github/workflows/: keep_alive.yml
server/: __init__.py  app.py
